--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1,7 +1,90 @@
-h1{
-    color: red;
+:root{
+    --color-text-base: black;
+    --color-page-background: #ffffff;
+    font-size: 60%;
 }
 
-p{
-    color: green;
+*{
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+}
+
+html {
+    width: 100%;
+    height: 100%;
+}
+
+body {
+    background-color: var(--color-page-background);
+    font-weight: 500;
+    font-family: "open Sans", sans-serif;
+    font-size: 1.8rem;
+    color: var(--color-text-base);
+    line-height: 1.5;
+}
+
+
+.Form-layout__ContentWrapper {
+    width: auto;
+    height: auto;
+    display: flex;
+    justify-content: center;
+}
+
+.Form-layout__ContainerWrapper {
+    width: 70%;
+}
+.Text__Heading {
+    color: #4A4A4A;
+    margin: 0px 0px 1.875rem;
+    font-size: 2.4rem;
+    font-weight: 100;
+    text-align: center;
+    display: block;
+}
+
+.TextField__FieldWrapper {
+    display: flex;
+    margin-bottom: 2rem;
+    justify-content: center;
+    border-radius: 0.3125rem;
+    border: 0.0625rem solid rgb(218, 220, 224);
+    width: 100%;
+    padding: 1.2rem;
+}
+
+.Button_ButtonWrapper {
+    width: 100%;
+    cursor: pointer;
+    padding: 1.2rem 0rem 1.2rem 0rem;
+    font-size: 2rem;
+    border-radius: 0.3125rem;
+    text-decoration: none;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    background-color: rgb(34, 64, 245);
+    color: white;
+    border-style: none;
+}
+.Button_ButtonWrapper:hover {
+    background-color:  rgb(47, 73, 223);
+}
+
+.Text__footerText {
+    color: #767676;
+    font-size: 1.2rem;
+    display: flex;
+    justify-content: flex-end;
+    align-items: baseline;
+    margin-top: 2rem;
+}
+
+.SocialLogin_separator {
+    color: rgb(74, 74, 74);
+    text-align: center;
+    margin: 1.75rem 0px;
+    font-size: 1.2rem;
+    background: linear-gradient(rgb(218, 220, 224), rgb(218, 220, 224)) 0px 0.6rem / 1px 1px repeat-x;
 }
