adicionando opções alternativas de registrar com facebook e google

--- a/views/signup.ejs
+++ b/views/signup.ejs
@@ -18,8 +18,21 @@
                             <h2 class="Text__footerText">Já tem uma conta?<a href="">Faça Login</a></h3>
                     </form>
 
-                    <p class="SocialLogin_separator">Or</p>
+                        <div class="SocialLogin_separator">
+                                <p class="Text__Separator">Ou continue com</p>
+                        </div>
 
+                        <div class="Button__Signup">
+                                <div class="Button__Facebook__Login">
+                                        <a href=""> <p>Entrar com Facebook</p> </a>
+                                </div>
+                        </div>
+
+                        <div class="Button__Signup">
+                                <div class="Button__Google__Login">
+                                        <a href=""> <p>Entrar com Google</p> </a>
+                                </div>
+                        </div>
 
         </div>
     </div>
