--- a/public/css/style.css
+++ b/public/css/style.css
@@ -85,6 +85,35 @@ body {
     color: rgb(74, 74, 74);
     text-align: center;
     margin: 1.75rem 0px;
-    font-size: 1.2rem;
-    background: linear-gradient(rgb(218, 220, 224), rgb(218, 220, 224)) 0px 0.6rem / 1px 1px repeat-x;
+    font-size: 1.6rem;
+    background: linear-gradient(rgb(218, 220, 224), rgb(218, 220, 224)) 0px 1.4rem / 1px 1px repeat-x;
+}
+
+.Text__Separator {
+    background: white;
+    display: inline;
+    padding: 0px 0.625rem;
+}
+
+.Button__Signup {
+    height: 3rem;
+    border-radius: 0.3rem;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    min-width: max-content;
+    box-shadow: rgb(75 75 75 / 25%) 0px 0.0625rem 0.025rem 0px, rgb(75 75 75 / 15%) 0px 0.0625rem 0.1875rem 0px;
+    transition: box-shadow 0.28s cubic-bezier(0.4, 0, 0.4, 2) 0s;
+    margin-top: 3rem;
+    padding: 2.4rem;
+    cursor: pointer;
+}
+
+.Button__Signup:hover {
+    box-shadow: rgb(75 75 750 / 25%) 0px 0.1rem 0rem 0px, rgb(75 75 75 / 15%) 0px 0.1rem 0.1rem 0px;
+}
+
+.Button__Signup a {
+    text-decoration: none;
+    color: rgb(74, 74, 74);
 }
