--- a/views/index.ejs
+++ b/views/index.ejs
@@ -2,8 +2,15 @@
 
 
 <body>
-    <h1>Titulo para teste</h1>
-    <p>Teste de paragrafo Teste de paragrafo Teste de paragrafo </p>
+    <%- include("partials/header.ejs") %>
+
+    <main class="content">
+        <h1>Titulo para teste</h1>
+        <p>Teste de paragrafo Teste de paragrafo Teste de paragrafo </p>
+    </main>
+    
+
+    <%- include("partials/footer.ejs") %>
+
 </body>
 
-<%- include("partials/footer.ejs") %>
