--- a/views/partials/footer.ejs
+++ b/views/partials/footer.ejs
@@ -1,4 +1,13 @@
-<footer>
-</footer>
+<footer class="footer">
+    <div class="footer__section footer__location">
 
-</html>
+    </div>
+    <div class="footer__section footer__links">
+        <ul>
+            <li><a href=""></a>Telefone: 11312445145</li>
+            <li><a href=""></a>Email: teste@hotmail.com</li>
+            <li><a href=""></a>Site desenvolido por: 24fggdg</li>
+            <li><a href=""></a>Agradiment9os a : fkfhfhfh757</li>
+        </ul>
+    </div>
+</footer>
