--- a/views/signup.ejs
+++ b/views/signup.ejs
@@ -1,12 +1,12 @@
 <%- include("partials/head.ejs") %>
 
 <body>
-    <div class="Form-layout__ContentWrapper">
+    <div class="Form-layout__ContentWrapper"><!--content__form-->
             <div class="Form-layout__ContainerWrapper">
             <!--    <h1 class="text__Heading">Ciências para todos!</h1> --> 
             <!--    <p>Este é nosso lema, que tal se registrar abaixo? ;) </p> -->
                     <h1 class="Text__Heading">Criar nova conta</h2>
-                    <form action="/signup" method="post">
+                    <form action="/signup" method="post"><!--content__field__text//content__button__submit//content__footer__text-->
                             <input class="TextField__FieldWrapper" type="text" name="name" id="name" placeholder="Nome" minlength="5" maxlength="60" required>
 
                             <input class="TextField__FieldWrapper" type="email" name="email" id="email" placeholder="Email" minlength="5" maxlength="150" required>
@@ -18,10 +18,11 @@
                             <h2 class="Text__footerText">Já tem uma conta?<a href="">Faça Login</a></h3>
                     </form>
 
-                        <div class="SocialLogin_separator">
+                        <div class="SocialLogin_separator"><!--content__login__separator-->
                                 <p class="Text__Separator">Ou continue com</p>
                         </div>
 
+                        <!--content__button__signup-->
                         <div class="Button__Signup">
                                 <div class="Button__Facebook__Login">
                                         <a href=""> <p>Entrar com Facebook</p> </a>
