--- a/public/css/partials/header.css
+++ b/public/css/partials/header.css
@@ -1,4 +1,4 @@
-/*Menu/header*/
+/*----------//--------------CONFIGURAÇÕES GERAIS DO MENU/HEADER------------------//------------*/
 .menu {
     display: flex;
     justify-content: space-between;
@@ -28,22 +28,17 @@
     cursor: pointer;
 }
 
+
 .menu__section ul li .menu__link{
     display: none;
+    text-decoration: none;
+    color: #1865f2;    
+    font-size: 1.5rem;
+    font-weight: bold;
 }
 
 .menu__section ul li .menu__logo{
     text-decoration: none;
-}
-
-.menu__section ul li .menu__login{
-    text-decoration: none;
-    color: white;
-    background: #1A73E8;
-    padding: 0.5rem;
-    border-radius: 4px;
-    font-size: 1.5rem;
-
 }
 
 .menu__section ul li .menu__avatar{
@@ -58,10 +53,194 @@
     height: auto;
     cursor: pointer;
 }
+/*TERMINA*/
 
-/* FALTA SIMPLIFICAR */
-/*FALTA MEDIA QUERIES*/
+/*----------//--------------MODAL DE LOGIN------------------//------------*/
+/* The Modal (background) */
+.modal {
+    display: none; /* Hidden by default */
+    position: fixed; /* Stay in place */
+    z-index: 1; /* Sit on top */
+    left: 0;
+    top: 0;
+    width: 100vw; /* Full width */
+    height: 100vh; /* Full height */
+    overflow: auto; /* Enable scroll if needed */
+    background-color: rgb(0,0,0); /* Fallback color */
+    background-color: rgba(0,0,0,0.4); /* Black w/ opacity */
+    padding-top: 60px;
+    cursor: pointer;
+  }
+  
+  /* Modal Content/Box */
+  .modal-content {
+    background-color: #fefefe;
+    margin: 5px auto; /* 15% from the top and centered */
+    border: 1px solid #888;
+    width: 80%; /* Could be more or less, depending on screen size */
+  }
+  
+  /* The Close Button */
+  .close {
+    /* Position it in the top right corner outside of the modal */
+    position: absolute;
+    right: 100px;
+    top: 58px;
+    color: #000;
+    font-size: 35px;
+    font-weight: bold;
+  }
+  
+  /* Close button on hover */
+  .close:hover,
+  .close:focus {
+    color: red;
+    cursor: pointer;
+  }
+  
+  /* Add Zoom Animation */
+  .animate {
+    -webkit-animation: animatezoom 0.6s;
+    animation: animatezoom 0.6s
+  }
+  
+  @-webkit-keyframes animatezoom {
+    from {-webkit-transform: scale(0)}
+    to {-webkit-transform: scale(1)}
+  }
+  
+  @keyframes animatezoom {
+    from {transform: scale(0)}
+    to {transform: scale(1)}
+  }
 
+  /* Set a style for all buttons */
+button {
+    background-color: #4CAF50;
+    color: white;
+    padding: 14px 20px;
+    margin: 8px 0;
+    border: none;
+    cursor: pointer;
+  }
+  
+  /* Add a hover effect for buttons */
+  button:hover {
+    opacity: 0.8;
+  }
+  
+  /* Extra style for the cancel button (red) */
+  .cancelbtn {
+    width: auto;
+    padding: 10px 18px;
+    background-color: #f44336;
+  }
+
+.Button__alternative{
+    display: flex;
+}
+/*TERMINA*/
+
+/*----------//--------------FORMULARIO DE LOGIN------------------//------------*/
+.Form-layout__ContainerWrapper {
+    width: 100%;
+    cursor: auto;
+}
+.Text__Heading {
+    color: #4A4A4A;
+    margin: 0px 0px 1.875rem;
+    font-size: 2.4rem;
+    font-weight: 100;
+    text-align: center;
+    display: block;
+}
+
+.TextField__FieldWrapper {
+    display: flex;
+    margin-bottom: 2rem;
+    justify-content: center;
+    border-radius: 0.3125rem;
+    border: 0.0625rem solid rgb(218, 220, 224);
+    width: 100%;
+    padding: 1.2rem;
+}
+
+.Button_ButtonWrapper {
+    width: 100%;
+    cursor: pointer;
+    padding: 1.2rem 0rem 1.2rem 0rem;
+    font-size: 2rem;
+    border-radius: 0.3125rem;
+    text-decoration: none;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    background-color: rgb(34, 64, 245);
+    color: white;
+    border-style: none;
+}
+.Button_ButtonWrapper:hover {
+    background-color:  rgb(47, 73, 223);
+}
+
+.Text__footerText {
+    color: #767676;
+    font-size: 1.2rem;
+    display: flex;
+    justify-content: flex-end;
+    align-items: baseline;
+    margin-top: 2rem;
+}
+
+.SocialLogin_separator {
+    color: rgb(74, 74, 74);
+    text-align: center;
+    margin: 1.75rem 0px;
+    font-size: 1.6rem;
+    background: linear-gradient(rgb(218, 220, 224), rgb(218, 220, 224)) 0px 1.4rem / 1px 1px repeat-x;
+}
+
+.Text__Separator {
+    background: white;
+    display: inline;
+    padding: 0px 0.625rem;
+}
+
+.Button__Signup {
+    height: 3rem;
+    border-radius: 0.3rem;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    min-width: max-content;
+    box-shadow: rgb(75 75 75 / 25%) 0px 0.0625rem 0.025rem 0px, rgb(75 75 75 / 15%) 0px 0.0625rem 0.1875rem 0px;
+    transition: box-shadow 0.28s cubic-bezier(0.4, 0, 0.4, 2) 0s;
+    margin-top: 3rem;
+    padding: 2.4rem;
+    cursor: pointer;
+}
+
+.Button__Signup:hover {
+    box-shadow: rgb(75 75 750 / 25%) 0px 0.1rem 0rem 0px, rgb(75 75 75 / 15%) 0px 0.1rem 0.1rem 0px;
+}
+
+.Button__Signup a {
+    text-decoration: none;
+    color: rgb(74, 74, 74);
+}
+/*TERMINA*/
+
+/*----------//--------------CONFIGURAÇÕES DO MENU-MOBILE------------------//------------*/ 
+
+
+
+
+
+
+
+/*TERMINA*//* FALTA SIMPLIFICAR */
+
+/*----------//--------------CONFIGURAÇÕES DAS MEDIA QUERIES------------------//------------*/ 
 @media (min-width: 763px) {
     .menu__section ul li .menu__icon{
         display: none;
