--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -2,18 +2,51 @@
         <div class="menu__section left">
             <ul>
                 <li><img  class="menu__icon" src="assets/burger-icon.svg" alt="Burger" onclick="myFunction()"></li>
-                <li><a class="menu__logo" href="">LOGO</a></li>
-                <li ><a class="menu__link" href="">Experiências</a></li>
-                <li ><a class="menu__link" href="">Sobre</a></li>
-                <li ><a class="menu__link" href="">Contato</a></li>
+                <li><a class="menu__logo" href="">LOGO</a></li><!--colocar dentro de navbar-->
+            
+                <!--menu grande de teste-->
+                <div class="navbar">
+            <a href="#home">Sobre</a>
+            <a href="#news">Contato</a>
+            <div class="dropdown">
+            <button class="dropbtn">Experiências
+                <i class="fa fa-caret-down"></i>
+            </button>
+            <div class="dropdown-content">
+                <div class="header">
+                <h2>Mega Menu</h2>
+                </div>
+                <div class="row">
+                <div class="column">
+                    <h3>Category 1</h3>
+                    <a href="#">Link 1</a>
+                    <a href="#">Link 2</a>
+                    <a href="#">Link 3</a>
+                </div>
+                <div class="column">
+                    <h3>Category 2</h3>
+                    <a href="#">Link 1</a>
+                    <a href="#">Link 2</a>
+                    <a href="#">Link 3</a>
+                </div>
+                <div class="column">
+                    <h3>Category 3</h3>
+                    <a href="#">Link 1</a>
+                    <a href="#">Link 2</a>
+                    <a href="#">Link 3</a>
+                </div>
+                </div>
+            </div>
+            </div>
+                </div>
             </ul>
         </div>
 
         <div class="menu__section right">
             <ul>
                 <li><form class="menu__search search__input" action="/action_page.php"><input type="text" placeholder="Pesquisar.." name="search"></form></li>
+                <li><img onclick="openSearch()" class="menu__button__search" src="assets/lupa.svg" alt=""></li>
                 <li><img onclick="myFunction2()" class="menu__avatar" src="assets/bussiness-man.svg" alt="Avatar picture"></li>
-                <li><button onclick="document.getElementById('id01').style.display='block'" class="menu__login" href="">Entrar</button></li>
             </ul>
         </div>
 
@@ -52,6 +85,7 @@
     <script src="js/script.js"></script>
     </header>
 
+
     <!--menu mobile-->
     <div class="topnav">
     <!-- Navigation links (hidden by default) -->
@@ -67,10 +101,20 @@
         <!-- Navigation links (hidden by default) -->
         <div id="myLinks-2">
             <a href="#news">Perfil</a>
-            <a href="#contact">Mensagens</a>
-            <a href="#about">Sair</a>
+            <a onclick="document.getElementById('id01').style.display='block'"  href="#about">Entrar/Sair</a>
         </div>
     </div>
+
+    <!--modal de login mobile-->
+    <div id="myOverlay" class="overlay">
+        <span class="closebtn" onclick="closeSearch()" title="Close Overlay">x</span>
+        <div class="overlay-content">
+          <form action="action_page.php">
+            <input type="text" placeholder="Search.." name="search">
+            <button type="submit"><i class="fa fa-search"></i></button>
+          </form>
+        </div>
+      </div>
 
 
 
