--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -1,6 +1,6 @@
     <!--menu principal-->
     <header class="menu">
-        <div class="menu__section">
+        <div class="menu__section"><!--Falta alinhar os links-->
             <div class="menu__section__left">
                 <ul>
                     <li><img  class="menu__icon" src="assets/burger-icon.svg" alt="Burger" onclick="myFunction()"></li>
@@ -34,57 +34,63 @@
                                         <a href="#">Link 2</a>
                                         <a href="#">Link 3</a>
                                     </div>
+                                    <div class="column">
+                                        <h3>Por série</h3>
+                                        <a href="#">Link 1</a>
+                                        <a href="#">Link 2</a>
+                                        <a href="#">Link 3</a>
+                                    </div>
                                 </div>
                             </div>
                     </div>
-                    <li><a href="#home">Sobre</a></li>
-                    <li><a href="#news">Contato</a></li>
+                    <li class="drop__links"><a href="#home">Sobre</a></li>
+                    <li class="drop__links"><a href="#news">Contato</a></li>
                 </ul>
             </div>
     
             <div class="menu__section__right">
                 <ul>
-                    <li><form class="menu__search search__input" action="/action_page.php"><input type="text" placeholder="Pesquisar.." name="search"></form></li>
+                    <li><form class="menu__search" action="/action_page.php"><input class="menu__input" type="text" placeholder="Pesquisar.." name="search"></form></li>
                     <li><img onclick="openSearch()" class="menu__button__search" src="assets/lupa.svg" alt=""></li>
                     <li><img onclick="myFunction2()" class="menu__avatar" src="assets/bussiness-man.svg" alt="Avatar picture"></li>
                 </ul>
             </div>
         </div>
-      
-        <!-- The Modal -->
-        <div id="id01" class="modal">
-            <!-- Modal Content -->
-            <div class="modal-content animate ">
-        <div class="Form-layout__ContainerWrapper">
-
-            <h1 class="Text__Heading">Login</h2>            
-            <form action="/signup" method="post"><!--content__field__text//content__button__submit//content__footer__text-->
-                <input class="TextField__FieldWrapper" type="email" name="email" id="email" placeholder="Email" minlength="5" maxlength="150" required>
-                <input class="TextField__FieldWrapper" type="password" name="password" id="password" placeholder="Senha" minlength="5" maxlength="30" required> 
-                <input class="Button_ButtonWrapper" type="submit" value="Entrar">
-            </form>
-
-            <div class="SocialLogin_separator"><!--content__login__separator-->
-                <p>Ou continue com</p>
-            </div>
-
-            <!--content__button__signup-->
-            <div class="Button__Signup">
-                <div class="Button__Google__Login">
-                    <a href=""> <p>Entrar com Google</p> </a>
-                </div>
-            </div>
-
-            <div class="Button__alternative" style="background-color:#f1f1f1">
-                <button type="button" onclick="document.getElementById('id01').style.display='none'" class="cancelbtn">Cancel</button>
-                <h2 class="Text__footerText">Não tem uma conta?<a href="">Registre-se</a></h3>
-            </div>
-        </div>
-            </div>
-        </div>
 
         <script src="js/script.js"></script>
     </header>
+
+    <!-- The Modal -->
+    <div id="id01" class="modal">
+        <!-- Modal Content -->
+        <div class="modal-content animate ">
+    <div class="Form-layout__ContainerWrapper">
+
+        <h1 class="Text__Heading">Login</h2>            
+        <form action="/signup" method="post"><!--content__field__text//content__button__submit//content__footer__text-->
+            <input class="TextField__FieldWrapper" type="email" name="email" id="email" placeholder="Email" minlength="5" maxlength="150" required>
+            <input class="TextField__FieldWrapper" type="password" name="password" id="password" placeholder="Senha" minlength="5" maxlength="30" required> 
+            <input class="Button_ButtonWrapper" type="submit" value="Entrar">
+        </form>
+
+        <div class="SocialLogin_separator"><!--content__login__separator-->
+            <p>Ou continue com</p>
+        </div>
+
+        <!--content__button__signup-->
+        <div class="Button__Signup">
+            <div class="Button__Google__Login">
+                <a href=""> <p>Entrar com Google</p> </a>
+            </div>
+        </div>
+
+        <div class="Button__alternative" style="background-color:#f1f1f1">
+            <button type="button" onclick="document.getElementById('id01').style.display='none'" class="cancelbtn">Cancel</button>
+            <h2 class="Text__footerText">Não tem uma conta?<a href="">Registre-se</a></h3>
+        </div>
+    </div>
+        </div>
+    </div>
 
     <!--menu mobile-->
     <div class="topnav">
