--- a/public/css/partials/header.css
+++ b/public/css/partials/header.css
@@ -224,7 +224,8 @@
   }
 
   /* Set a style for all buttons */
-button {
+
+/*  button {
     background-color: #4CAF50;
     color: white;
     padding: 14px 20px;
@@ -232,7 +233,7 @@ button {
     border: none;
     cursor: pointer;
   }
-  
+  */
   /* Add a hover effect for buttons */
   button:hover {
     opacity: 0.8;
@@ -427,71 +428,51 @@ button {
   }
     /*Terminou*/
 
+
+
+
   /*----------//--------------MODAL DE PESQUISA MOBILE------------------//------------*/
 /* The overlay effect with black background */
-.overlay {
-  height: 100%;
+.search__content__mobile {
+  padding: 1.3rem;  
   width: 100%;
   display: none;
   position: fixed;
   z-index: 1;
   top: 0;
-  left: 0;
-  background-color: rgb(0,0,0);
-  background-color: rgba(0,0,0, 0.9); /* Black with a little bit see-through */
-}
-
-/* The content */
-.overlay-content {
-  position: relative;
-  top: 46%;
-  width: 80%;
-  text-align: center;
-  margin-top: 30px;
-  margin: auto;
-}
-
-/* Close button */
-.overlay .closebtn {
-  position: absolute;
-  top: 20px;
-  right: 45px;
-  font-size: 60px;
-  cursor: pointer;
-  color: white;
-}
-
-.overlay .closebtn:hover {
-  color: #ccc;
-}
-
-/* Style the search field */
-.overlay input[type=text] {
-  padding: 15px;
-  font-size: 17px;
-  border: none;
-  float: left;
-  width: 80%;
+  /* left: 0; */
   background: white;
 }
 
-.overlay input[type=text]:hover {
-  background: #f1f1f1;
+/* The content */
+.search__content__input {
+  width: 100%;
+  
 }
 
-/* Style the submit button */
-.overlay button {
-  float: left;
-  width: 20%;
-  padding: 15px;
-  background: #ddd;
-  font-size: 17px;
-  border: none;
-  cursor: pointer;
+.search__form {
+    display: flex;
+    width: 100%;
 }
 
-.overlay button:hover {
-  background: #bbb;
+.search__form__input {
+  display: flex;
+  width: 100%;
+  padding: 0.6rem;
+}
+
+
+/* Close button */
+.search__content__button {
+    /* top: 20px; */
+    /* right: 0px; */
+    cursor: pointer;
+    color: white;
+    width: 1.9rem;
+    height: auto;
+    margin-right: 1rem;
+    /* background: black; */
+    display: flex;
 }
   /*Terminou*/
 
