--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -119,6 +119,7 @@
         <div class="search__content__input">
           <form class="search__form" action="action_page.php">
             <input class="search__form__input" type="text" placeholder="Search.." name="search">
+            <button class="search__form__button" type="submit" value="Ir"></button>
           </form>
         </div>
       </div>
